tests/negative/typecheck/subslice_non_slice.orng
fn main() -> Int {
    let x = 3[1..2]
    4
}